res/examples/valid/let_decl_typed_assign_from_identifier.eg
let a: number = 123;
let b = a;
let c: number = a + b;