res/examples/invalid/type_alias_block_scoped.eg
type Int = number;

let a: Int = 5;

{
    type Integer = Int;
};

let b: number = 20;
let c: Integer = a + b;

// out: TypeError: `Integer` is not defined